[project]
name = "lmppy"
version = "0.1.0"
description = "A tiny lightning peer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["cryptography>=44.0.1", "ecdsa>=0.19.0"]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.7"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
