[project]
name = "lmppy"
version = "0.1.0"
description = "A tiny lightning peer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecdsa>=0.19.0",
    "pyln-proto>=24.11.1",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.7"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
